mas mini cambios en css

--- a/css/styles.css
+++ b/css/styles.css
@@ -51,7 +51,8 @@ body {
 	padding: 10px 0 10px 0
 }
 .container {
- 	padding: 15px 0;
+ 	padding-right: 15px;
+	padding-left: 15px;
 	margin-right: auto;
   margin-left: auto;
 	position: relative;
@@ -76,7 +77,7 @@ header {
 	display: flex;
 	text-align: center;
 	overflow: hidden;
-	margin: 10px 0;
+	margin: 10px 0 0 0;
 }
 .logo {
 	width: 120px;
@@ -353,7 +354,7 @@ hr {
 .deporte {
 	width: 100%;
 	float: left;
-	margin-bottom: 18px;
+	margin-bottom: 12px;
 }
 .deporte img {
 	width: 100%;
@@ -468,9 +469,12 @@ input[type="checkbox"] {
 }
 
 @media (min-width: 768px) {
+	.container {
+		padding: 15px 0;
+	}
 	header {
 		justify-content: center;
-		margin-bottom: 15px;
+		margin: 25px 0;
 	}
 	.head-left {
 		display:inline;
@@ -481,7 +485,7 @@ input[type="checkbox"] {
 	}
 	h1 {
 		padding: 0 10px;
-		align-self: center;
+		align-self: baseline;
 		width: 500px;
 	}
 	.burger-icon {
