--- a/css/styles.css
+++ b/css/styles.css
@@ -65,28 +65,6 @@ a:hover {
 	color: #003366;
 	font-weight: 600;
 }
-
-/* HEADER ------------------------------- */
-.head-left {
-	display: none;
-}
-header {
-	font-size: 1.5em;
-	width: 100%;
-	height: 50px;
-	display: flex;
-	text-align: center;
-	overflow: hidden;
-	margin: 10px 0 0 0;
-}
-.logo {
-	width: 120px;
-}
-h1 {
-	width: 100%;
-	flex: 1;
-	position: absolute;
-}
 h3 {
 	font-size: 1.2em;
 	color: #333333;
@@ -122,6 +100,31 @@ hr {
   margin-bottom: 20px;
   border: 0;
   border-top: 1px solid #969696;
+}
+.section_tit {
+	margin-top: 35px;
+}
+
+/* HEADER ------------------------------- */
+.head-left {
+	display: none;
+}
+header {
+	font-size: 1.5em;
+	width: 100%;
+	height: 50px;
+	display: flex;
+	text-align: center;
+	overflow: hidden;
+	margin: 10px 0 0 0;
+}
+.logo {
+	width: 120px;
+}
+h1 {
+	width: 100%;
+	flex: 1;
+	position: absolute;
 }
 
 /* MENU  ------------------------------- */
