--- a/css/styles.css
+++ b/css/styles.css
@@ -516,7 +516,7 @@ input[type="checkbox"] {
 	}
 	.caja {
 		background-color: white;
-		width: 300px;
+		max-width: 300px;
 		padding-top: 25px;
 		padding-bottom: 25px;
 	}
