--- a/css/styles.css
+++ b/css/styles.css
@@ -46,7 +46,7 @@ table {
 
 /* REGLAS GENRALES ------------------------------- */
 body {
-	background-color: white;
+	background-color: #FFF;
 	font-family: 'Roboto', sans-serif;
 	padding: 10px 0 10px 0
 }
