Panel preguntas todo cerradito

--- a/css/styles.css
+++ b/css/styles.css
@@ -48,7 +48,7 @@ table {
 body {
 	background-color: #FFF;
 	font-family: 'Roboto', sans-serif;
-	padding: 10px 0 10px 0
+	padding: 10px 0 0 0
 }
 .container {
  	padding-right: 15px;
