cambios en slider

--- a/css/styles.css
+++ b/css/styles.css
@@ -178,7 +178,7 @@ h1 {
 	display: block;
 }
 .btn-solid:hover {
-  background-color: #01264a;
+  	background-color: #01264a;
 }
 .btn-solid-sm {
 	max-width: 70px;
@@ -188,15 +188,15 @@ h1 {
 	text-transform: uppercase;
 	text-align: center;
 	font-size: 0.8em;
-  margin-top: 0;
-  margin-left: auto;
-  margin-right: auto;
+ 	margin-top: 0;
+  	margin-left: auto;
+  	margin-right: auto;
 }
 .btn-solid-sm:hover {
-  background-color: #01264a;
+  	background-color: #01264a;
 }
 .btn-solid-lg {
-  width: 250px;
+  	width: 250px;
 	padding: 6px;
 	background-color: #003366;
 	color: white;
@@ -269,10 +269,9 @@ h1 {
 }
 .flechas {
 	position: absolute;
-	top: 25%;
+	top: 35%;
 	z-index: 2;
 	color: white;
-	visibility: hidden;
 	width: 100%;
 	padding: 0 10px;
 	font-size: 1.5em;
@@ -298,10 +297,13 @@ h1 {
 	font-weight: 600;
 }
 .evento {
+	display: none;
 	position: relative;
 	width: 100%;
-	margin-bottom: 15px;
 	overflow: hidden;
+}
+.evento:first-child {
+	display: block;
 }
 .evento img {
 	width: 100%;
@@ -367,6 +369,73 @@ h1 {
 	text-align: left;
 }
 
+/* FORMS ------------------------------- */
+.form {
+	margin: 20px auto;
+}
+.form h6 {
+	display: inline;
+}
+input[type="text"] {
+	border: 1px solid #003366;
+	margin: 5px auto;
+	width: 250px;
+	padding: 6px;
+	display: block;
+	font-size: 0.8em;
+}
+input[type="password"] {
+	border: 1px solid #003366;
+	margin: 5px auto;
+	width: 250px;
+	padding: 6px;
+	display: block;
+	font-size: 0.8em;
+}
+input[type="checkbox"] {
+	display: inline-block;
+}
+.con_fb {
+	max-width: 250px;
+	margin: 0 auto;
+}
+.legals {
+	text-align: left;
+	max-width: 250px;
+	margin: 10px auto;
+}
+.recordarme {
+	max-width: 250px;
+	margin: 10px auto;
+	text-align: left;
+	font-size: 0.8em;
+}
+
+/* FAQ */
+.panel {
+	overflow: hidden;
+	text-align: center;
+	margin: 0 auto;
+	max-width: 480px;
+	border-radius: 0;
+	box-shadow: none;
+}
+.panel-title {
+	font-size: 0.9em;
+}
+.panel-group .panel {
+	border-radius: 0px;
+}
+.panel-body {
+	font-size: 0.9em;
+	line-height: normal;
+	text-align: left;
+}
+.panel-default > .panel-heading {
+	border-color: #003366;
+	background-color: white;
+}
+
 /* FOOTER ------------------------------- */
 
 .footer_outer {
@@ -376,7 +445,6 @@ h1 {
 	margin: 0 auto;
 	padding-top: 20px;
   	overflow:hidden;
-
 }
 .footer_outer h3 {
   	font-size: 0.6em;
@@ -481,74 +549,7 @@ footer .copyright {
 	font-size: 0.5em;
   	//float: right;
 }
-
-/* FORMS ------------------------------- */
-.form {
-	margin: 20px auto;
-}
-.form h6 {
-	display: inline;
-}
-input[type="text"] {
-	border: 1px solid #003366;
-	margin: 5px auto;
-	width: 250px;
-	padding: 6px;
-	display: block;
-	font-size: 0.8em;
-}
-input[type="password"] {
-	border: 1px solid #003366;
-	margin: 5px auto;
-	width: 250px;
-	padding: 6px;
-	display: block;
-	font-size: 0.8em;
-}
-input[type="checkbox"] {
-	display: inline-block;
-}
-.con_fb {
-	max-width: 250px;
-	margin: 0 auto;
-}
-.legals {
-	text-align: left;
-	max-width: 250px;
-	margin: 10px auto;
-}
-.recordarme {
-	max-width: 250px;
-	margin: 10px auto;
-	text-align: left;
-	font-size: 0.8em;
-}
-
-/* FAQ */
-.panel {
-	overflow: hidden;
-	text-align: center;
-	margin: 0 auto;
-	max-width: 480px;
-	border-radius: 0;
-	box-shadow: none;
-}
-.panel-title {
-	font-size: 0.9em;
-}
-.panel-group .panel {
-	border-radius: 0px;
-}
-.panel-body {
-	font-size: 0.9em;
-	line-height: normal;
-	text-align: left;
-}
-.panel-default > .panel-heading {
-	border-color: #003366;
-	background-color: white;
-}
-
+	
 /* MEDIA QUERIES ------------------------------- */
 @media (min-width: 420px) {
 	.nav-items a {
@@ -614,6 +615,21 @@ input[type="checkbox"] {
 	.header_link {
 		display: inline-block;
 	}
+	.evento {
+		display: table-cell;
+		padding-right: 10px;
+		width: 20%;
+	}
+	.evento:first-child {
+		display: table-cell;
+	}
+	.evento:last-child {
+		padding-right: 0;
+		width: 19%;
+	}
+	.flechas {
+		top: 25%;
+	}
 	.caja {
 		background-color: white;
 		max-width: 300px;
@@ -665,19 +681,7 @@ input[type="checkbox"] {
   /*.container {
     width: 970px;
   }*/
-	.evento {
-	display: table-cell;
-	padding-right: 10px;
-	width: 20%;
 	}
-	.evento:last-child {
-	padding-right: 0;
-	width: 19%;
-	}
-	.flechas {
-		visibility: visible;
-	}
-}
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
