--- a/css/styles.css
+++ b/css/styles.css
@@ -118,7 +118,6 @@ hr {
 header {
 	font-size: 1.5em;
 	width: 100%;
-	height: 50px;
 	display: flex;
 	text-align: center;
 	overflow: hidden;
@@ -148,7 +147,7 @@ h1 {
 	visibility: hidden;
 	display: flex;
 	justify-content: flex-end;
-	align-items: flex-start;
+	align-items: center;
 	overflow: hidden;
 	margin: 0;
 	padding: 0;
@@ -161,7 +160,6 @@ h1 {
 }
 .nav-items a {
 	font-size: 0.4em;
-	font-family: Roboto, sans-serif;
 	font-weight: 500;
 }
 .nav-items a:hover {
@@ -169,6 +167,15 @@ h1 {
 }
 .user {
 	color: orange;
+}
+.foto-perfil {
+	max-height: 40px;
+	max-width: 40px;
+	border-radius: 50%;
+	overflow: hidden;
+}
+.foto-perfil img {
+	width: 100%;
 }
 
 /* BOTONES  ------------------------------- */
