--- a/css/styles.css
+++ b/css/styles.css
@@ -42,13 +42,14 @@ table {
 	border-spacing: 0;
 }
 
-/* ------------------------------- CSS TEAMAPP! ------------------------------- */
+/* ------------------------------- CSS TEAMUP! ------------------------------- */
 
 /* REGLAS GENRALES ------------------------------- */
 body {
 	background-color: #FFF;
 	font-family: 'Roboto', sans-serif;
 	padding: 10px 0 0 0;
+
 }
 .container {
  	padding-right: 15px;
@@ -58,13 +59,11 @@ body {
 	position: relative;
 }
 a {
-  color: #006660;
+  color: #003366;
 }
 a:hover {
 	text-decoration: none;
-	font-weight: initial;
 	color: #999999;
-
 }
 h3 {
 	font-size: 1.2em;
@@ -81,7 +80,7 @@ h4 {
 }
 h5 {
 	font-size: 1em;
-	color: #006660;
+	color: #003366;
 	font-weight: 500;
 	margin: 5px 0;
 	text-align: left;
@@ -118,7 +117,7 @@ hr {
 header {
 	font-size: 1.5em;
 	width: 100%;
-	height: 40px;
+	height: 50px;
 	display: flex;
 	text-align: center;
 	overflow: hidden;
@@ -136,7 +135,7 @@ h1 {
 /* MENU  ------------------------------- */
 .burger-icon {
 	float: right;
-	color: #006660;
+	color: #003366;
 }
 .menu {
 	width: 100%;
@@ -184,7 +183,7 @@ h1 {
   margin: 10px auto;
 	max-width: 250px;
 	padding: 6px;
-	background-color: #006660;
+	background-color: #003366;
 	color: white;
 	text-transform: uppercase;
 	text-align: center;
@@ -193,14 +192,13 @@ h1 {
 	display: block;
 }
 .btn-solid:hover {
-  background-color: #02413d;
+  background-color: #01264a;
 	color: white;
-	font-weight: normal;
 }
 .btn-solid-sm {
 	max-width: 70px;
 	padding: 6px;
-	background-color: #006660;
+	background-color: #003366;
 	color: white;
 	text-transform: uppercase;
 	text-align: center;
@@ -210,13 +208,13 @@ h1 {
   margin-right: auto;
 }
 .btn-solid-sm:hover {
-  background-color: #02413d;
+  background-color: #01264a;
 	color: white;
 }
 .btn-solid-lg {
-  width: 250px;
+  	width: 250px;
 	padding: 6px;
-	background-color: #006660;
+	background-color: #003366;
 	color: white;
 	text-transform: uppercase;
 	text-align: center;
@@ -226,8 +224,8 @@ h1 {
 	letter-spacing: 0.05em;
 }
 .btn-solid-lg:hover {
-  background-color: #02413d;
-	color: white;
+  	background-color: #01264a;
+		color: white;
 }
 
 /* MEGA-IMG ------------------------------- */
@@ -248,7 +246,7 @@ h1 {
 	color: #fff;
 	max-width: 250px; /* para que se arme en dos lineas */
 	margin: 0 auto; /* para que se centre en otros viewports */
-	text-shadow: 0.25px 0.25px 0.25px #000000;
+	text-shadow: 1px 1px 8px #000000;
 }
 .mega img {
 	margin: 0 0 30px;
@@ -263,7 +261,7 @@ h1 {
 
 /* BUSCADOR ------------------------------- */
 .buscador {
-	border: 1px solid #006660;
+	border: 1px solid #003366;
 	padding: 1.5vh;
 	margin: 10px 0 20px auto;
 	font-size: 1em;
@@ -273,7 +271,7 @@ h1 {
 .select {
 	border: 0;
 	width: 65px;
-	border-right: 1px solid #006660;
+	border-right: 1px solid #003366;
 	font-size: 0.7em;
 	color: #333333;
 	margin-right: 5px;
@@ -298,7 +296,7 @@ h1 {
 .flechas button {
 	width: 40px;
 	height: 40px;
-	background-color: #006660;
+	background-color: rgba(0, 51, 102, 0.71);
 	border-radius: 50%;
 }
 .flecha_izq {
@@ -396,7 +394,7 @@ h1 {
 	display: inline;
 }
 input[type="text"] {
-	border: 1px solid #006660;
+	border: 1px solid #003366;
 	margin: 5px auto;
 	width: 250px;
 	padding: 6px;
@@ -404,7 +402,7 @@ input[type="text"] {
 	font-size: 0.8em;
 }
 input[type="password"] {
-	border: 1px solid #006660;
+	border: 1px solid #003366;
 	margin: 5px auto;
 	width: 250px;
 	padding: 6px;
@@ -466,7 +464,7 @@ input[type="file"] {
 	text-align: left;
 }
 .panel-default > .panel-heading {
-	border-color: #006660;
+	border-color: #003366;
 	background-color: white;
 }
 
@@ -474,17 +472,17 @@ input[type="file"] {
 
 .footer_outer {
 	max-width: 1140px;
-  width:100%;
+  width: 100%;
 	margin: 0 auto;
 	padding-top: 20px;
-  overflow:hidden;
+  overflow: hidden;
 }
 .footer_outer h3 {
   	font-size: 0.6em;
   	margin-top: 0px;
 }
 .footer_inner {
-	display:flex;
+	display: flex;
 	justify-content: space-between;
 	margin: 0 auto;
 	padding: 0 15px;
@@ -499,7 +497,6 @@ footer .logo img {
 	overflow: hidden;
 }
 footer .cia {
-
 	box-sizing: border-box;
 	overflow: hidden;
 }
@@ -515,7 +512,6 @@ footer .enlaces {
 	font-size: 0.5em;
 }
 footer .redes {
-
 	width:100%;
 	overflow: hidden;
 	box-sizing: border-box;
@@ -537,12 +533,12 @@ footer .redes li {
 	font-size: 1.5em;
 }
 footer .redes li:last-child {
-	margin-right:0;
+	margin-right: 0;
 }
 footer .legales {
  	clear: both;
 	position:relative;
-	top:15px;
+	top: 15px;
 	box-sizing: border-box;
 	overflow: hidden;
 	margin: 0 auto;
@@ -561,7 +557,7 @@ footer .copyright {
 	display: block;
 	overflow: hidden;
 	text-align: center;
-  	margin: 0 auto;
+  margin: 0 auto;
 	font-size: 0.5em;
 }
 
@@ -574,7 +570,7 @@ footer .copyright {
 	display: inline;
 }
 input[type="text"] {
-	border: 1px solid #006660;
+	border: 1px solid #003366;
 	margin: 5px auto;
 	width: 250px;
 	padding: 6px;
@@ -582,7 +578,7 @@ input[type="text"] {
 	font-size: 0.8em;
 }
 input[type="password"] {
-	border: 1px solid #006660;
+	border: 1px solid #003366;
 	margin: 5px auto;
 	width: 250px;
 	padding: 6px;
@@ -591,6 +587,10 @@ input[type="password"] {
 }
 input[type="checkbox"] {
 	display: inline-block;
+}
+.con_fb {
+	max-width: 250px;
+	margin: 0 auto;
 }
 .legals {
 	text-align: left;
@@ -603,6 +603,15 @@ input[type="checkbox"] {
 	text-align: left;
 	font-size: 0.8em;
 }
+.redirection {
+	padding: 30px 0;
+	text-align: center;
+	height: 50vh;
+	background-color: #e4e4e4;
+	line-height: 1.2em;
+	font-size: 1em;
+}
+
 
 /* FAQ */
 .panel {
@@ -626,9 +635,10 @@ input[type="checkbox"] {
 	text-align: justify;
 }
 .panel-default > .panel-heading {
-	border-color: #006660;
+	border-color: #003366;
 	background-color: white;
 }
+
 
 /* MEDIA QUERIES ------------------------------- */
 @media (min-width: 420px) {
@@ -659,7 +669,7 @@ input[type="checkbox"] {
 		margin: 25px 0;
 	}
 	.head-left {
-		display:inline;
+		display: inline;
 		width: 25%;
 	}
 	.logo {
@@ -734,6 +744,7 @@ input[type="checkbox"] {
 		padding-top: 50px;
 		padding-bottom: 50px;
 	}
+
 	footer .redes {
 		margin-bottom: 20px;
 	}
@@ -758,18 +769,17 @@ input[type="checkbox"] {
 		margin:0;
 	}
 }
-
 @media (min-width: 860px) {
 	.evento {
-		display: table-cell;
-		padding-right: 10px;
-		width: 20%;
+	display: table-cell;
+	padding-right: 10px;
+	width: 20%;
 	}
 	.evento:last-child {
-		padding-right: 0;
-		width: 19%;
-	}
+	padding-right: 0;
+	width: 19%;
 
+	}
 @media (min-width: 1200px) {
   .container {
     width: 1170px;
