--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -49,7 +49,9 @@ body {
 	background-color: #FFF;
 	font-family: 'Roboto', sans-serif;
 	padding: 10px 0 0 0;
-
+}
+.grid {
+	display: grid;
 }
 .container {
  	padding-right: 15px;
